--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   --primary-font: Plus Jakarta Sans;
   --vibrant-color: linear-gradient(135deg, #FFDF2B, #FF7A00);
   --even-table-color: 0, 0, 0;
-  --sidebar-width: 250px;
+  --sidebar-width: 275px;
 }
 
 * {
@@ -42,7 +42,7 @@ body {
   height: 100%;
   background-color: var(--panel-color);
   z-index: 1;
-  border-right: 1px solid var(--border-color);
+  border-right: 2px solid var(--border-color);
 }
 .sidebar .title {
   display: flex;
@@ -71,7 +71,7 @@ body {
   gap: 10px;
 }
 .sidebar .sidebar-wrapper ul:nth-child(2) {
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   border-radius: 10px;
   padding: 10px;
 }
@@ -181,7 +181,7 @@ body {
   border-radius: 10px;
   cursor: pointer;
   font-family: var(--primary-font);
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: #FAFAFA;
 }
 .content .btnSection form button {
@@ -194,31 +194,38 @@ body {
   display: flex;
   gap: 0.5rem;
   align-items: center;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: white;
 }
 .content .btnSection form button i {
   color: var(--accent-color);
 }
+.content .card.with-table {
+  display: grid;
+  gap: 1em;
+  padding: 1em;
+  border: 2px solid var(--border-color);
+  background-color: var(--panel-color);
+  border-radius: 10px;
+  padding: 0.5em 1em;
+}
 .content .card.welcome {
   display: grid;
   gap: 1em;
   padding: 1em;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: var(--panel-color);
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 2em 3em;
 }
 .content .card.welcome .v-wrapper {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   gap: 0;
-}
-.content .card.welcome .v-wrapper h1 {
-  font-size: 24px;
 }
 .content .card.welcome .v-wrapper p {
   color: var(--lighter-text-color);
@@ -248,7 +255,7 @@ body {
   display: grid;
   gap: 1em;
   padding: 1em;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: var(--panel-color);
   border-radius: 10px;
 }
@@ -274,20 +281,20 @@ body {
   text-align: start;
   color: var(--text-color);
   font-weight: 700;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 2px solid var(--border-color);
 }
 .content .table-container table tbody {
   color: var(--lighter-text-color);
 }
 .content .table-container table tbody tr td:first-child {
-  border-width: 1px 0px 1px 1px;
+  border-width: 2px 0px 2px 2px;
   border-color: var(--border-color);
   border-style: solid;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 .content .table-container table tbody tr td:last-child {
-  border-width: 1px 1px 1px 0px;
+  border-width: 2px 2px 2px 0px;
   border-color: var(--border-color);
   border-style: solid;
   border-top-right-radius: 10px;
@@ -297,7 +304,7 @@ body {
   background-color: rgba(var(--even-table-color), 0.025);
 }
 .content .table-container table tbody tr td {
-  border-width: 1px 0px;
+  border-width: 2px 0px;
   border-style: solid;
   border-color: var(--border-color);
   padding: 0.5rem 0.85rem;
@@ -373,7 +380,7 @@ body {
   display: grid;
   gap: 1em;
   padding: 1em;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: var(--panel-color);
   border-radius: 10px;
   opacity: 0;
@@ -468,7 +475,7 @@ body {
 
 .modal {
   background-color: var(--panel-color);
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   border-radius: 10px;
   padding: 1.5em;
   width: -webkit-fit-content;
@@ -508,8 +515,9 @@ body {
   font-family: var(--primary-font);
   padding: 10px;
   border-radius: 3px;
-  color: var(--lighter-text-color);
-  border: 1px solid var(--lighter-text-color);
+  color: var(--text-color);
+  font-weight: 500;
+  border: 2px solid var(--border-color);
 }
 .modal input[type=file] {
   padding: 0;
@@ -584,7 +592,7 @@ body {
   display: grid;
   gap: 1em;
   padding: 1em;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   background-color: var(--panel-color);
   border-radius: 10px;
   gap: 0;
@@ -593,6 +601,7 @@ body {
 .dash-cards .card :nth-child(1) {
   font-size: 18px;
   font-weight: bold;
+  z-index: 1;
 }
 .dash-cards .card span.how-many {
   color: var(--accent-color);
@@ -651,13 +660,13 @@ body {
     justify-content: space-between;
     align-items: center;
     border-right: none;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
   }
   .sidebar .sidebar-wrapper {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    border: 1px solid var(--border-color);
+    border: 2px solid var(--border-color);
     padding: 1em;
     top: 120%;
     right: -100%;
@@ -686,12 +695,12 @@ body {
   .card.welcome {
     flex-direction: column-reverse;
     padding: 2em !important;
+    text-align: center;
   }
   .card.welcome .v-wrapper {
     align-items: center;
   }
   .card.welcome .v-wrapper h1 {
-    text-align: center;
     font-size: 28px;
   }
 }
