--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,7 @@
     display: grid;
     gap: 1em;
     padding: 1em;
-    border: 1px solid var(--border-color);
+    border: 2px solid var(--border-color);
     background-color: var(--panel-color);
     border-radius: 10px;
 }
@@ -77,7 +77,7 @@
     --even-table-color: 0, 0, 0;
 
     // sidebar
-    --sidebar-width: 250px;
+    --sidebar-width: 275px;
 }
 
 * {
@@ -111,7 +111,7 @@ body {
     background-color: var(--panel-color);
     z-index: 1;
     
-    border-right: 1px solid var(--border-color);
+    border-right: 2px solid var(--border-color);
 
     .title {
         display: flex;
@@ -144,7 +144,7 @@ body {
         gap: 10px;
 
         ul:nth-child(2) {
-            border: 1px solid var(--border-color);
+            border: 2px solid var(--border-color);
             border-radius: 10px;
             padding: 10px;
 
@@ -243,7 +243,7 @@ body {
             select {
                 @include button;
                 font-family: var(--primary-font);
-                border: 1px solid var(--border-color);
+                border: 2px solid var(--border-color);
                 background-color: #FAFAFA;
             }
 
@@ -251,7 +251,7 @@ body {
                 @include button;
                 @include h-wrapper;
                 align-items: center;
-                border: 1px solid var(--border-color);
+                border: 2px solid var(--border-color);
                 background-color: white;
 
                 i {
@@ -261,19 +261,21 @@ body {
         }
     }
 
+    .card.with-table {
+        @include card;
+        padding: 0.5em 1em;
+    }
+
     .card.welcome {
         @include card;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 2em 3em;
 
         .v-wrapper {
             @include v-wrapper;
             gap: 0;
-
-            h1 {
-                font-size: 24px;
-            }
             
             p {
                 color: var(--lighter-text-color);
@@ -319,7 +321,7 @@ body {
                         text-align: start;
                         color: var(--text-color);
                         font-weight: 700;
-                        border-bottom: 1px solid var(--border-color);
+                        border-bottom: 2px solid var(--border-color);
                     }
                 }
             }
@@ -328,7 +330,7 @@ body {
                 color: var(--lighter-text-color);
 
                 tr td:first-child {
-                    border-width: 1px 0px 1px 1px;
+                    border-width: 2px 0px 2px 2px;
                     border-color: var(--border-color);
                     border-style: solid;
                     border-top-left-radius: 10px;
@@ -336,7 +338,7 @@ body {
                    }
 
                 tr td:last-child {
-                    border-width: 1px 1px 1px 0px;
+                    border-width: 2px 2px 2px 0px;
                     border-color: var(--border-color);
                     border-style: solid;
                     border-top-right-radius: 10px;
@@ -350,7 +352,7 @@ body {
                 tr {
                     
                     td {
-                        border-width: 1px 0px;
+                        border-width: 2px 0px;
                         border-style: solid;
                         border-color: var(--border-color);
                         padding: 0.5rem 0.85rem;
@@ -527,7 +529,7 @@ body {
 
 .modal {
     background-color: var(--panel-color);
-    border: 1px solid var(--border-color);
+    border: 2px solid var(--border-color);
     border-radius: 10px;
     padding: 1.5em;
     width: -webkit-fit-content;
@@ -555,8 +557,9 @@ body {
         font-family: var(--primary-font);
         padding: 10px;
         border-radius: 3px;
-        color: var(--lighter-text-color);
-        border: 1px solid var(--lighter-text-color);
+        color: var(--text-color);
+        font-weight: 500;
+        border: 2px solid var(--border-color);
     }
 
     input[type=file] {
@@ -632,6 +635,7 @@ body {
         :nth-child(1) {
             font-size: 18px;
             font-weight: bold;
+            z-index: 1;
         }
         
         span.how-many {
@@ -698,13 +702,13 @@ body {
         align-items: center;
         
         border-right: none;
-        border-bottom: 1px solid var(--border-color);
+        border-bottom: 2px solid var(--border-color);
         
         .sidebar-wrapper{
             height: -webkit-fit-content;
             height: -moz-fit-content;
             height: fit-content;
-            border: 1px solid var(--border-color);
+            border: 2px solid var(--border-color);
             padding: 1em;
             top: 120%;
             right: -100%;
@@ -740,12 +744,12 @@ body {
     .card.welcome {
         flex-direction: column-reverse;
         padding: 2em !important;
+        text-align: center;
         
         .v-wrapper{
             align-items: center;
             
             h1 {
-                text-align: center;
                 font-size: 28px;
             }
         }
